--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,34 @@
-Python==3
-FastApi==0.115.8
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+bcrypt==4.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+distro==1.9.0
+dotenv==0.9.9
+fastapi[standard]
+frozenlist==1.5.0
+greenlet==3.1.1
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+multidict==6.1.0
+numpy>=1.26.4,<2.3.0
+orjson==3.10.15
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dotenv==1.0.1
+python-multipart
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
+starlette==0.45.3
+tenacity==9.0.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn[standard]
+yarl==1.18.3
+zstandard==0.23.0
+
